# nsw-topo-split

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: cd.yaml  ci.yaml  main.yaml
nsw_topo_split/: __init__.py  __main__.py  _main.py  names_25k.json  nsw_topo_map_names_scales.json
requirements/: dev.txt
