[project]
name = "nsw-topo-split"
version = "0.1"
dependencies = [
    "pymupdf",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "mypy",
    "pip-tools",
    "pre-commit",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nsw_topo_split"]

[tool.isort]
multi_line_output = 3

[tool.mypy]
strict = true
files = ["nsw_topo_split"]


[[tool.mypy.overrides]]
module = ["pymupdf"]
ignore_missing_imports = true

[tool.pylint]
max-line-length = 88
