[project]
name = "nsw-topo-split"
version = "0.1.0b3"
dependencies = [
    "pymupdf",
]
requires-python = ">=3.9"
authors = [
    {name="Thomas Schanzer"},
]
description = "A tool for downloading and nicely splitting NSW Spatial Services topographic maps across smaller pages"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://github.com/tschanzer/nsw-topo-split/blob/v0.1.0b3/README.md"
Repository = "https://github.com/tschanzer/nsw-topo-split"
Issues = "https://github.com/tschanzer/nsw-topo-split/issues"

[project.scripts]
nsw-topo-split = "nsw_topo_split._main:main"

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "mypy",
    "isort",
    "pip-tools",
    "pre-commit",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nsw_topo_split"]

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.mypy]
strict = true
files = ["nsw_topo_split"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pymupdf"]
ignore_missing_imports = true

[tool.pylint]
max-line-length = 88
